[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackyeah2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<0.111",
    "uvicorn[standard]>=0.27,<0.28",
    "elasticsearch[async]>=8.12,<9",
    "ruff>=0.13.3",
    "requests>=2.32.5",
    "bs4>=0.0.2",
    "openai>=2.1.0",
    "gtfs-realtime-bindings>=1.0.0",
    "pandas>=2.3.3",
]

[tool.setuptools]
packages = ["src"]
