[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackyeah2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<0.111",
    "uvicorn[standard]>=0.27,<0.28",
    "elasticsearch[async]>=8.12,<9",
    "ruff>=0.13.3",
    "networkx>=3.2,<4",
    "gtfs-kit>=6.0,<7",
    "pandas>=2.2,<3",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "orjson>=3.10",
]

[tool.setuptools]
packages = ["src"]
